--- a/iclr-paper-new.tex
+++ b/iclr-paper-new.tex
@@ -507,8 +507,11 @@ noalignDRAW & 2.8 & 14.1 & 23.1 & 68.0 & 31 & 0.155 \\ %& 7.01 \\ % 1.0 & 6.124 
 alignDRAW & 3.0 & 14.0 & 22.9 & 68.5 & 31 & 0.156 \\ %& 6.99 \\ % 0.924 & 6.216 & 11.184 & 52.492 & 48 & 0.115
 \end{tabulary}
 \end{center}
-\caption{Retrieval results of different models. \bf{ R$\at$K} is Recall@K (high is good). Med r is the median rank (low is good).
-Best results overall are bold while best results without OxfordNet features are underlined}
+\caption{Retrieval results of different models. 
+\textbf{R@K} is Recall@K
+    (high is good). \textbf{Med} {\it r} is the median rank (low is
+    good). 
+}
 \label{tab:results}
 %\vspace{-0.3cm}
 \end{table}
