--- a/iclr-paper-new.tex
+++ b/iclr-paper-new.tex
@@ -401,7 +401,7 @@ estimate the variational lower bound accordingly.
 \caption{\small
  \textbf{Top}: Examples of changing the color while keeping the caption fixed.
  \textbf{Bottom}: Examples of changing the object while keeping the caption fixed.
- The shown images are the probabilities $\sigmoid(\canv_{T})$. }
+ The shown images are the probabilities $\sigmoid(\canv_{T})$. Best viewed in colour.}
 \label{fig:genimages3}
 \vspace{-0.1in}
 \end{figure}
