--- a/supp.tex
+++ b/supp.tex
@@ -72,3 +72,125 @@ alignDRAW & -1792.15 & -1797.24 & -1791.53 & -2042.31
 \label{tab:nll}
 \end{center}
 \end{table}
+
+\newpage
+\section*{Appendix C: Effect of Sharpening Images.}
+\label{sec:post_processing}
+
+\begin{figure}[!h]
+\captionsetup[subfigure]{labelformat=empty}
+\vspace{-0.27in}
+\begin{center}
+\subfloat[]{\includegraphics[width=0.23\textwidth]{figures/new/a-stop-sign-is-flying-in-blue-skies-blurry.png}}\quad
+%
+\subfloat[]{\includegraphics[width=0.23\textwidth]{figures/new/a-herd-of-elephants-flying-in-the-blue-skies-blurry.png}}\quad
+%
+\subfloat[]{\includegraphics[width=0.23\textwidth]{figures/new/a-toilet-seat-sits-open-in-the-grass-field-blurry.png}}\quad
+%
+\subfloat[]{\includegraphics[width=0.23\textwidth]{figures/new/a-person-skiing-on-sand-clad-vast-desert-blurry.png}}\\
+\vspace{-0.45cm}
+%
+\subfloat[%A stop sign is flying in blue skies.
+]{\includegraphics[width=0.23\textwidth]{figures/new/a-stop-sign-is-flying-in-blue-skies-sharp.png}}\quad
+%
+\subfloat[%A herd of elephants flying in the blue skies.
+]{\includegraphics[width=0.23\textwidth]{figures/new/a-herd-of-elephants-flying-in-the-blue-skies-sharp.png}}\quad
+%
+\subfloat[%A toilet seat sits open in the grass field.
+]{\includegraphics[width=0.23\textwidth]{figures/new/a-toilet-seat-sits-open-in-the-grass-field-sharp.png}}\quad
+%
+\subfloat[%A person skiing on sand clad vast desert.
+]{\includegraphics[width=0.23\textwidth]{figures/new/a-person-skiing-on-sand-clad-vast-desert-sharp.png}}\\
+%
+
+\subfloat[]{\includegraphics[width=0.23\textwidth]{figures/new/a-yellow-school-bus-parked-in-a-parking-lot-blurry.png}}\quad
+%
+\subfloat[]{\includegraphics[width=0.23\textwidth]{figures/new/a-red-school-bus-parked-in-a-parking-lot-blurry.png}}\quad
+%
+\subfloat[]{\includegraphics[width=0.23\textwidth]{figures/new/a-green-school-bus-parked-in-a-parking-lot-blurry.png}}\quad
+%
+\subfloat[]{\includegraphics[width=0.23\textwidth]{figures/new/a-blue-school-bus-parked-in-a-parking-lot-blurry.png}}\\
+\vspace{-0.45cm}
+%
+\subfloat[%A yellow school bus parked in a parking lot.
+]{\includegraphics[width=0.23\textwidth]{figures/new/a-yellow-school-bus-parked-in-a-parking-lot-sharp.png}}\quad
+%
+\subfloat[%A red school bus parked in a parking lot.
+]{\includegraphics[width=0.23\textwidth]{figures/new/a-red-school-bus-parked-in-a-parking-lot-sharp.png}}\quad
+%
+\subfloat[%A green school bus parked in a parking lot.
+]{\includegraphics[width=0.23\textwidth]{figures/new/a-green-school-bus-parked-in-a-parking-lot-sharp.png}}\quad
+%
+\subfloat[%A blue school bus parked in a parking lot.
+]{\includegraphics[width=0.23\textwidth]{figures/new/a-blue-school-bus-parked-in-a-parking-lot-sharp.png}}\\
+%
+
+\subfloat[]{\includegraphics[width=0.23\textwidth]{figures/new/the-decadent-chocolate-dessert-is-on-the-table-blurry.png}}\quad
+%
+\subfloat[]{\includegraphics[width=0.23\textwidth]{figures/new/a-bowl-of-bananas-is-on-the-table-blurry.png}}\quad
+%
+\subfloat[]{\includegraphics[width=0.23\textwidth]{figures/new/a-vintage-photo-of-a-cat-blurry.png}}\quad
+%
+\subfloat[]{\includegraphics[width=0.23\textwidth]{figures/new/a-vintage-photo-of-a-dog-blurry.png}}\\
+\vspace{-0.45cm}
+%
+\subfloat[%The decadent chocolate desert is on the table.
+]{\includegraphics[width=0.23\textwidth]{figures/new/the-decadent-chocolate-dessert-is-on-the-table-sharp.png}}\quad
+%
+\subfloat[%A bowl of bananas is on the table.
+]{\includegraphics[width=0.23\textwidth]{figures/new/a-bowl-of-bananas-is-on-the-table-sharp.png}}\quad
+%
+\subfloat[%A vintage photo of a cat.
+]{\includegraphics[width=0.23\textwidth]{figures/new/a-vintage-photo-of-a-cat-sharp.png}}\quad
+%
+\subfloat[%A vintage photo of a dog.
+]{\includegraphics[width=0.23\textwidth]{figures/new/a-vintage-photo-of-a-dog-sharp.png}}\\
+%
+
+\subfloat[]{\includegraphics[width=0.23\textwidth]{figures/new/a-very-large-commercial-plane-flying-in-blue-skies-blurry.png}}\quad
+%
+\subfloat[]{\includegraphics[width=0.23\textwidth]{figures/new/a-very-large-commercial-plane-flying-in-rainy-skies-blurry.png}}\quad
+%
+\subfloat[]{\includegraphics[width=0.23\textwidth]{figures/new/a-herd-of-elephants-walking-across-a-dry-grass-field-blurry.png}}\quad
+%
+\subfloat[]{\includegraphics[width=0.23\textwidth]{figures/new/a-herd-of-elephants-walking-across-a-green-grass-field-blurry.png}}\\
+\vspace{-0.45cm}
+%
+\subfloat[%A very large commercial plane flying in blue skies.
+]{\includegraphics[width=0.23\textwidth]{figures/new/a-very-large-commercial-plane-flying-in-blue-skies-sharp.png}}\quad
+%
+\subfloat[%A very large commercial plane flying in rainy skies.
+]{\includegraphics[width=0.23\textwidth]{figures/new/a-very-large-commercial-plane-flying-in-rainy-skies-sharp.png}}\quad
+%
+\subfloat[%A herd of elephants walking across a dry grass field.
+]{\includegraphics[width=0.23\textwidth]{figures/new/a-herd-of-elephants-walking-across-a-dry-grass-field-sharp.png}}\quad
+%
+\subfloat[%A herd of elephants walking across a green grass field.
+]{\includegraphics[width=0.23\textwidth]{figures/new/a-herd-of-elephants-walking-across-a-green-grass-field-sharp.png}}\\
+%
+
+\subfloat[]{\includegraphics[width=0.23\textwidth]{figures/new/a-rider-on-a-blue-motorcycle-in-the-desert-blurry.png}}\quad
+%
+\subfloat[]{\includegraphics[width=0.23\textwidth]{figures/new/a-rider-on-a-blue-motorcycle-in-the-forest-blurry.png}}\quad
+%
+\subfloat[]{\includegraphics[width=0.23\textwidth]{figures/new/a-surfer-,-a-woman-,-and-a-child-walk-on-the-beach-blurry.png}}\quad
+%
+\subfloat[]{\includegraphics[width=0.23\textwidth]{figures/new/a-surfer-,-a-woman-,-and-a-child-walk-on-the-sun-blurry.png}}\\
+\vspace{-0.45cm}
+%
+\subfloat[%A rider on a blue motorcycle in the desert.
+]{\includegraphics[width=0.23\textwidth]{figures/new/a-rider-on-a-blue-motorcycle-in-the-desert-sharp.png}}\quad
+%
+\subfloat[%A rider on a blue motorcycle in the forest.
+]{\includegraphics[width=0.23\textwidth]{figures/new/a-rider-on-a-blue-motorcycle-in-the-forest-sharp.png}}\quad
+%
+\subfloat[%A surfer, a woman, and a child walk on the beach.
+]{\includegraphics[width=0.23\textwidth]{figures/new/a-surfer-,-a-woman-,-and-a-child-walk-on-the-beach-sharp.png}}\quad
+%
+\subfloat[%A surfer, a woman, and a child walk on the sun.
+]{\includegraphics[width=0.23\textwidth]{figures/new/a-surfer-,-a-woman-,-and-a-child-walk-on-the-sun-sharp.png}}\\
+\end{center}
+%
+%\caption{\small Effect of sharpening generated images shown in the publication \textbf{Bottom}: Sharpened Images. \textbf{Top}: Original Images}
+%\vspace{-0.1in}
+\end{figure}
